Body spacing fixed

--- a/css/style.css
+++ b/css/style.css
@@ -9304,8 +9304,8 @@ a:hover,
 .carousel-item .pf_text .title {
   display: block;
   position: absolute;
-  width: 100%;
-  top: 80%;
+  width: 0%;
+  top: 0%;
   font-size: 20px;
   font-weight: 700;
   height: 0;
